--- a/index.html
+++ b/index.html
@@ -171,13 +171,14 @@
     </p>
     <p>
         📧 <a href="mailto:logistykajest@spoko.pl">logistykajest@spoko.pl</a><br>
-        🔗 <a href="#" target="www.linkedin.com/in/aleksanderdubak">LinkedIn</a>
+        🔗 <a href="www.linkedin.com/in/aleksanderdubak" target="www.linkedin.com/in/aleksanderdubak">LinkedIn</a>
     </p>
 </section>
 
 <footer>
-    © 2026 Doradztwo Logistyczne
+    © 2026 Doradztwo Logistyczne LJS (Logistyka Jest Spoko)
 </footer>
 
 </body>
 </html>
+
